@@ -130,6 +130,8 @@ typedef struct {
 	struct TAG_ntdef *tag_RELLEQ;
 	struct TAG_ntdef *tag_RELGT;
 	struct TAG_ntdef *tag_RELGEQ;
+	struct TAG_ntdef *tag_SIZE;
+	struct TAG_ntdef *tag_BYTESIN;
 
 	struct TAG_ntdef *tag_NDECL;
 	struct TAG_ntdef *tag_NPARAM;
