@@ -88,5 +88,6 @@ RESCHEDULE,	69,	NULL
 SETPRI,		70,	NULL
 PUBLIC,		71,	NULL
 ASM,		72,	NULL
+BYTESIN,	73,	NULL
 %%
 
