@@ -1,4 +1,5 @@
 
+31/12/2005	frmb	more FUNCTION handling, some support for SIZE operator, parser fixups
 29/12/2005	frmb	various extra bits for FUNCTION handling (in progress)
 11/12/2005	frmb	more support for MOBILE types
 10/12/2005	frmb	moved initialiser code for CHANs out of occampi_decl into occampi_type
@@ -81,3 +82,4 @@
 10/04/2005	frmb	tidy-ups
 12/03/2005	frmb	more work on the lexer and parser
 23/10/2004	frmb	initial framework
+
